--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>ISO commands</title>
 </head>
 <body>
-    <iframe src="IOS_parancsok.pdf" width="100%" height="90vh" frameborder="0"></iframe>
+    <iframe src="IOS_parancsok.pdf" width="100%" height="800px" frameborder="0"></iframe>
 </body>
 </html>
